# synthesis-ai

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.refinery/: chunking_ledger.jsonl  extraction_ledger.jsonl  profiling_ledger.jsonl
.refinery/pageindex/: background-checks.json
.refinery/profiles/: 2013-E.C-Procurement-information.json  2020_Audited_Financial_Statement_Report.json  ETS-Annual-Report-2023_2024.json  background-checks.json  doc-contract.json  doc-det.json  doc-graph.json  doc-main-test.json  doc-time.json  graph-main-smoke.json  smoke-main.json  tax_expenditure_ethiopia_2021_22.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: PROJECT_CONTEXT.md
rubric/: extraction_rules.yaml
specs/001-triage-document-profile/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/agents/: __init__.py  chunker.py  (+4 more)
tests/: conftest.py  test_decision_evidence_fields.py  test_decision_evidence_repeatability.py  test_deterministic_repeatability.py  test_document_profile_schema.py  test_domain_classifier_interface.py  test_extraction_cost_estimation.py  test_graph_entrypoint_contract.py  test_keyword_domain_classifier.py  test_known_sample_validation.py  test_language_detection.py  test_layout_detection.py  test_main_entrypoint.py  test_origin_detection.py  test_pdf_statistics.py  test_profile_persistence.py  test_profile_serialization.py  test_profiling_ledger_format.py  test_sc004_advanced_processing_rule.py  test_triage_smoke.py
(+266 files in other folders)
