[project]
name = "synthesis-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langdetect>=1.0.9",
    "langgraph>=0.3.34",
    "pydantic>=2.11.0",
    "pdfplumber>=0.11.9",
]

[dependency-groups]
dev = [
    "jsonschema>=4.25.1",
    "pytest>=8.4.2",
]
